--- a/thesis.tex
+++ b/thesis.tex
@@ -136,7 +136,7 @@
 
 % Efficient Manipulation Task Planning via
 % Reuse-Informed Optimization of Planning Effort
-\title{Completing Motion Tasks Efficiently in Complex Environments}
+\title{Completing Manipulation Tasks Efficiently in Complex Environments}
 \author{Christopher M. Dellin}
 \date{\today}
 %\date{March 28, 2015}
