--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -210,7 +210,7 @@ This allows computation to be efficiently cached and reused.
 The combination of
 marginal utility, lazy evaluation, and roadmap methods
 work in concert and are adaptable to new domains.
-Section~\ref{sec:discussion} concludes the paper with a discussion
+Section~\ref{sec:discussion} concludes the chapter with a discussion
 of potential extensions and applications of our algorithm.
 
 \section{Utility in Motion Planning}
