--- a/thesis.tex
+++ b/thesis.tex
@@ -179,7 +179,7 @@ Lydia Kavraki, Rice University\\
 \include{thesis-ch05-lemur}
 \include{thesis-ch06-family}
 %%\include{thesis-ch06-family-extra}
-\include{thesis-ch07-discussion}
+%\include{thesis-ch07-discussion}
 
 \appendix
 \include{thesis-ch03-lazysp-proofs}
